Styling icons and error messages

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <h2>Criar Uma Conta</h2>
         </div>
         <form id="form" class="form"></form>
-        <div class="form-control">
+        <div class="form-control error">
             <label for="username">Nome de usuário</label>
             <input type="text" id="username" placeholder="Digite seu nome de usuário..." />
             <i class="fas fa-exclamation-circle"></i>
@@ -26,7 +26,7 @@
             <small>Mensagem de Erro</small>
         </div>
 
-        <div class="form-control">
+        <div class="form-control error">
             <label for="email">Email</label>
             <input type="text" id="email" placeholder="Digite seu email..." />
             <i class="fas fa-exclamation-circle"></i>
@@ -34,7 +34,7 @@
             <small>Mensagem de Erro</small>
         </div>
 
-        <div class="form-control">
+        <div class="form-control success">
             <label for="password">Senha</label>
             <input type="text" id="password" placeholder="Digite sua senha..." />
             <i class="fas fa-exclamation-circle"></i>
