--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <h2>Criar Uma Conta</h2>
         </div>
         <form id="form" class="form"></form>
-        <div class="form-control error">
+        <div class="form-control">
             <label for="username">Nome de usuário</label>
             <input type="text" id="username" placeholder="Digite seu nome de usuário..." />
             <i class="fas fa-exclamation-circle"></i>
@@ -26,7 +26,7 @@
             <small>Mensagem de Erro</small>
         </div>
 
-        <div class="form-control error">
+        <div class="form-control">
             <label for="email">Email</label>
             <input type="text" id="email" placeholder="Digite seu email..." />
             <i class="fas fa-exclamation-circle"></i>
@@ -34,7 +34,7 @@
             <small>Mensagem de Erro</small>
         </div>
 
-        <div class="form-control success">
+        <div class="form-control">
             <label for="password">Senha</label>
             <input type="text" id="password" placeholder="Digite sua senha..." />
             <i class="fas fa-exclamation-circle"></i>
@@ -54,6 +54,8 @@
     </div>
 
     <script src="https://kit.fontawesome.com/1d05cf7977.js" crossorigin="anonymous"></script>
+
+    <script src="./scripts.js"></script>
 </body>
 
 </html>
