--- a/Cadastro/indexCadastro.html
+++ b/Cadastro/indexCadastro.html
@@ -52,7 +52,7 @@
                 <small>Mensagem de erro</small>
             </div>
 
-            <button type="submit">Enviar</button>
+            <button type="submit">Cadastrar</button>
         </form>
     </div>
 
