About and contact added

--- a/assets/html/indexLogin.html
+++ b/assets/html/indexLogin.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="/assets/css/stylesLogin.css" />
+    <link rel="stylesheet" href="../css/stylesLogin.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700;900&display=swap"
@@ -15,6 +15,12 @@
 
 <body>
     <div class="container">
+        <nav class="navbar">
+            <ul class="nav-links">
+                <li><a href="../html/sobre.html">Sobre</a></li>
+                <li><a href="../html/contato.html">Contato</a></li>
+            </ul>
+        </nav>
         <div class="header">
             <h2>Entrar</h2>
         </div>
@@ -44,7 +50,7 @@
 
             <div>
                 <p> Não tem conta?
-                    <a href="/assets/html/indexCadastro.html"> Cadastre-se </a>
+                    <a href="../html/indexCadastro.html"> Cadastre-se </a>
                 </p>
 
             </div>
@@ -53,7 +59,7 @@
 
     <script src="https://kit.fontawesome.com/f9e19193d6.js" crossorigin="anonymous"></script>
 
-    <script src="/assets/js/scriptsLogin.js"></script>
+    <script src="../js/scriptsLogin.js"></script>
 </body>
 
 </html>
