--- a/assets/html/indexCadastro.html
+++ b/assets/html/indexCadastro.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="/assets/css/stylesCadastro.css" />
+    <link rel="stylesheet" href="../css/stylesCadastro.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700;900&display=swap"
@@ -58,7 +58,7 @@
 
     <script src="https://kit.fontawesome.com/f9e19193d6.js" crossorigin="anonymous"></script>
 
-    <script src="/assets/js/scriptsCadastro.js"></script>
+    <script src="../js/scriptsCadastro.js"></script>
 </body>
 
 </html>
