--- a/assets/html/indexLogin copy.html
+++ b/assets/html/indexLogin copy.html
@@ -5,39 +5,30 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="../css/stylesCadastro.css" />
+    <link rel="stylesheet" href="../css/stylesLogin.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700;900&display=swap"
         rel="stylesheet" />
-    <title>Cadastro de Usuário</title>
+    <title>Login de Usuário</title>
 </head>
 
 <body>
     <div class="container">
         <nav class="navbar">
             <ul class="nav-links">
-                <li><a href="../html/indexLogin.html">Login</a></li>
                 <li><a href="../html/sobre.html">Sobre</a></li>
                 <li><a href="../html/contato.html">Contato</a></li>
             </ul>
         </nav>
         <div class="header">
-            <h2>Criar Uma Conta</h2>
+            <h2>Entrar</h2>
         </div>
 
         <form id="form" class="form">
             <div class="form-control">
                 <label for="username">Nome de usuário</label>
                 <input type="text" id="username" placeholder="Digite seu nome de usuário..." />
-                <i class="fas fa-exclamation-circle"></i>
-                <i class="fas fa-check-circle"></i>
-                <small>Mensagem de erro</small>
-            </div>
-
-            <div class="form-control">
-                <label for="email">Email</label>
-                <input type="text" id="email" placeholder="Digite seu email.." />
                 <i class="fas fa-exclamation-circle"></i>
                 <i class="fas fa-check-circle"></i>
                 <small>Mensagem de erro</small>
@@ -51,21 +42,24 @@
                 <small>Mensagem de erro</small>
             </div>
 
-            <div class="form-control">
-                <label for="password-confirmation">Confirmação de senha</label>
-                <input type="password" id="password-confirmation" placeholder="Digite sua senha novamente..." />
-                <i class="fas fa-exclamation-circle"></i>
-                <i class="fas fa-check-circle"></i>
-                <small>Mensagem de erro</small>
+            <button type="submit">Entrar</button>
+
+            <div>
+                <hr>
             </div>
 
-            <button type="submit">Cadastrar</button>
+            <div>
+                <p> Não tem conta?
+                    <a href="../html/indexCadastro.html"> Cadastre-se </a>
+                </p>
+
+            </div>
         </form>
     </div>
 
     <script src="https://kit.fontawesome.com/f9e19193d6.js" crossorigin="anonymous"></script>
 
-    <script src="../js/scriptsCadastro.js"></script>
+    <script src="../js/scriptsLogin.js"></script>
 </body>
 
 </html>
